err/tgext.chameleon-genshi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chameleon-1.2.13.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/TurboGears2-2.3.11.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/ast'...
Listing './lib/python3.5/site-packages/chameleon/core'...
Compiling './lib/python3.5/site-packages/chameleon/core/codegen.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/codegen.py", line 31
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chameleon/core/etree.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/etree.py", line 55
    except xml.parsers.expat.ExpatError, e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chameleon/core/filecache.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/filecache.py", line 40
    exec source in _locals
              ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/chameleon/core/loader.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/loader.py", line 44
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chameleon/core/utils.py'...
***   File "./lib/python3.5/site-packages/chameleon/core/utils.py", line 766
    raise cls, exc, tb
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chameleon/docs'...
Listing './lib/python3.5/site-packages/chameleon/genshi'...
Compiling './lib/python3.5/site-packages/chameleon/genshi/expressions.py'...
***   File "./lib/python3.5/site-packages/chameleon/genshi/expressions.py", line 50
    raise ValueError, "Invalid variable name '%s' (reserved)." % var
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chameleon/i18n'...
Compiling './lib/python3.5/site-packages/chameleon/i18n/i18nize.py'...
***   File "./lib/python3.5/site-packages/chameleon/i18n/i18nize.py", line 149
    except (IOError, etree.XMLSyntaxError), e:
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chameleon/tests'...
Listing './lib/python3.5/site-packages/chameleon/tests/templates'...
Compiling './lib/python3.5/site-packages/chameleon/tests/test_unicode.py'...
***   File "./lib/python3.5/site-packages/chameleon/tests/test_unicode.py", line 38
    except UnicodeEncodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chameleon/zpt'...
Compiling './lib/python3.5/site-packages/chameleon/zpt/expressions.py'...
***   File "./lib/python3.5/site-packages/chameleon/zpt/expressions.py", line 92
    raise ValueError, "Invalid variable name '%s' (reserved)." % var
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/crank'...
Listing './lib/python3.5/site-packages/crank-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/fixtures'...
Listing './lib/python3.5/site-packages/tests/fixtures/package_with_helpers_submodule'...
Listing './lib/python3.5/site-packages/tests/fixtures/package_with_helpers_submodule/lib'...
Listing './lib/python3.5/site-packages/tests/test_stack'...
Listing './lib/python3.5/site-packages/tests/test_stack/config'...
Listing './lib/python3.5/site-packages/tests/test_stack/config/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/dispatch'...
Listing './lib/python3.5/site-packages/tests/test_stack/dispatch/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/fixture'...
Listing './lib/python3.5/site-packages/tests/test_stack/lib'...
Listing './lib/python3.5/site-packages/tests/test_stack/lib/templatetools'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/templates'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/templates/sub'...
Listing './lib/python3.5/site-packages/tg'...
Listing './lib/python3.5/site-packages/tg/appwrappers'...
Listing './lib/python3.5/site-packages/tg/configuration'...
Listing './lib/python3.5/site-packages/tg/configuration/auth'...
Listing './lib/python3.5/site-packages/tg/configuration/mongo'...
Listing './lib/python3.5/site-packages/tg/configuration/sqla'...
Listing './lib/python3.5/site-packages/tg/controllers'...
Listing './lib/python3.5/site-packages/tg/renderers'...
Listing './lib/python3.5/site-packages/tg/support'...
Listing './lib/python3.5/site-packages/tg/templates'...
Listing './lib/python3.5/site-packages/tg/util'...
Listing './lib/python3.5/site-packages/tgext'...
Listing './lib/python3.5/site-packages/tgext/chameleon_genshi'...
Listing './lib/python3.5/site-packages/tgext.chameleon_genshi-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
